# progressive

./: .gitignore  README.md  index.html  io.github.h8moss.progressive.desktop  io.github.h8moss.progressive.metainfo.xml  io.github.h8moss.progressive.yml  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/ProgressNode/util/: index.ts
src/lib/components/: LogoSVG.svelte  RecentlyUsed.svelte  UpdateChecker.svelte  WelcomeScreen.svelte
src/lib/components/NodeView/: NodeView.svelte
src/lib/util/: addRecentData.ts  appEventListener.ts  getThemes.ts  removeData.ts
